--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -2,27 +2,15 @@
 
 ## CONTEXT
 
-The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that return to the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. Declines in spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions (Decker et al. 2014). 
+The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that return to the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. Like most coho salmon, IF Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts (Arbieder et al. 2020). During their freshwater fry residence, IF coho are believed to migrate away from spawning sites and into small tributaries and off-channel habitat. Most (88%) IFC have a 3-year life cycle, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn.The remaining 12% have a 4-year life cycle in which they spend an additional year in freshwater before migrating as smolts in their third year. Both 3-year and 4-year life cycles spend 18 months at sea. Less than 1% of IF Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years (Arbeider et al. 2020).
 
-Five WSP Conservation Units (CUs) have been identified for of Interior Fraser Coho: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson (DFO 2015; (Figure \@ref(fig:coho-map)). Interior Fraser Coho were assessed under the framework of DFO’s Wild Salmon Policy (WSP) in 2014, at which time the Integrated Status Assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson; DFO 2015).  
+Five WSP Conservation Units (CUs) have been identified for of Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson (DFO 2015; (Figure \@ref(fig:coho-map)). Previous work by the Interior Fraser Coho Recovery Team also identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance in each of these smaller subpopulation units (IFCRT 2006; Table \@ref(tab:cohoCU2SP)). The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic evidence. The 11 subpopulations are described in detail in the IFCRT report (2006). The Fraser Canyon CU is the only CU with a single subpopulation; this result is because most of the spawning for the CU occurs within a single river (Arbeider et al. 2020). 
+
 
 
 ```{r coho-map, fig.cap="The five Conservation Units that make up the Interior Fraser Coho Stock Management Unit.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics(here::here("figure/coho-map.png"))
 ```
-
-
-Interior Fraser Coho have also been assessed twice by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC; COSEWIC 2002, 2016). The entire IF Coho SMU as classified as a single Designatable Unit (DU) by COWESIC in both of these assessments; however, a recent revision to DU classification has lead to 5 DUs that are closely aligned with the 5 CUs (citation available yet?). The most recent COSEWIC assessment classified the Interior Fraser Coho Designatable Unit (DU) as having “Threatened” status (COSEWIC 2016).
-
-In response to the initial listing in 2002, DFO developed a conservation strategy for Interior Fraser Coho in xxxx (citation). The 
-
-Interior Fraser Coho Recovery Team
-
-
-
-
-undertaken several recovery planning processes for Interior Fraser Coho. 
-
 
 
 -------------------------------------------------------
@@ -47,8 +35,11 @@ South Thompson            Adams Drainage
 Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and associated sub-populations. Note that the definition of these sub-populations, including mapped boundaries, are provided in ??? [citation needed].
 
 
-In response to this listing, DFO undertook a Recovery Potential Assessment (RPA) for Interior Fraser Coho in 2018 that describes status, habitat, threats and limiting factors, candidate recovery targets, and abundance projections for the DU, as well as recommendations regarding mitigation and allowable harm (Arbeider et al. 2020). Our data and methods for calculating CU-level benchmarks borrow heavily from this recent RPA work.
+Declines in IF Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 (Decker et al. 2014). Evidence of a new, lower productivity regime starting in return year 1994 has been documented (Decker et al. 2014) that coincides with declines in spawner abundances.  In 2002, the IF Coho stock management unit was designated endangered by the  Committee on the Status of Endangered Wildlife in Canada (COSWEIC) based on the stock unit being assessed as a single 'Designatable Unit' (DU; COSEWIC 2002). Subsequent work by the Interior Fraser Coho Recovery Team lead to a conservation strategy outlining recovery objectives for the management unit (IFCRT 2006). Those recovery objectives were largely based on the distribution of spawning escapement among the 11 subpopulations in Table \@ref(tab:cohoCU2SP). A short-term recovery objective of 20,000 spawners was identified as a level that would maintain a minimum of 1,000 naturally spawning wild Coho Salmon in at least half of the 11 subpopulations, while a long-term recovery target of 40,000 spawners was identified as a level that would maintain 1,000 or more wild Coho Salmon in all 11 subpopulations. In 2014, Decker et al. (2014) assessed status relative to the 2006 IFCRT objectives, and concluded that IF coho had been above the short-term recovery target of 20,000 spawners in every year since 2008, and above the long-term recovery target of 40,000 spawners in the most recent two return years (2012 and 2013)  
 
+An updated COSEWIC assessment in 2016 upgraded the status designation for the IF Coho DU to 'threatened' (COSEWIC 2016).  In 2018, DFO undertook a Recovery Potential Assessment (RPA) for Interior Fraser Coho that described status, habitat, threats, limiting factors to recovery, candidate recovery targets, and abundance projections for the DU, as well as recommendations regarding mitigation and allowable harm (Arbeider et al. 2020). As part of this RPA, the long-term DU recovery target for IF Coho was recommended was a 3-year geometric mean abundance of 35,935 natural-origin spawners. This target was based on the historically observed aggregate abundance that met a distributional goal of 1000 spawners in all subpopulations.
+
+Interior Fraser Coho were also been assessed under the framework of DFO’s Wild Salmon Policy (WSP) in 2014, at which time the Integrated Status Assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson; DFO 2015). 
 
 
 
@@ -65,6 +56,9 @@ knitr::include_graphics(here::here("figure/coho-escapeSeries.png"))
 
 
 
+
+
+
 -	Still to add: 
   - Caveats: e.g., recruitment estimated using common ER for all CUs; review Arbeider et al. for additional data caveats
 
@@ -75,15 +69,16 @@ knitr::include_graphics(here::here("figure/coho-escapeSeries.png"))
 ### CU Status Estimation
 
 
-We consider two types of CU benchmark when developing aggregate abundance-based LRPs for Interior Fraser Coho. The first type is the WSP lower benchmark of Sgen, where Sgen is the number of spawners required to recover to SMSY (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing (Holt et al. 2009).  Four different formulations of stock recruitment model are used to estimate Sgen based on previous analyses. Key differences among the formulations centre around whether a hierarchical model structure is used when estimating Sgen and whether an informative prior distribution is applied to the spawner abundance level at which the stock replaced itself (SRep).    
+We consider two types of CU benchmark to represent CU status when developing LRPs for Interior Fraser Coho. 
+
+The first type is the WSP lower benchmark of Sgen, where Sgen is the number of spawners required to recover to SMSY (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing (Holt et al. 2009).  Four different formulations of stock recruitment model are used to estimate Sgen based on previous analyses. Key differences among the formulations centre around whether a hierarchical model structure is used when estimating Sgen and whether an informative prior distribution is applied to the spawner abundance level at which the stock replaced itself (SRep).    
 
 - Still to add:
   - more details on 4 SRR models (incl. equations)
   - show SR model fits
 
 
-The second type is based on a short-term recovery target identified by the Interior Fraser Coho Recovery Team (2006), in which CU status is based on the distribution of spawning escapement among sub-populations nested within CUs (Table \@ref(tab:cohoCU2SP)). This benchmark is specific to the Interior Fraser Coho SMU. We have retained it as part of this case study to maintain consistency with previous work.
-
+The second type of CU benchmark is based on the distribution of spawning escapement among subpopulations nested within CUs (Table \@ref(tab:cohoCU2SP)). We have taken it from the short-term recovery objective identified by the Interior Fraser Coho Recovery Team (2006). Arbeider et al. summarized that short-term recovery target as: "the 3-year geometric average, natural-origin escapement in at least half of the subpopulations within each of the five populations [CUs] is to exceed 1,000 spawning Coho Salmon, excluding hatchery fish spawning in the wild."  As noted by Arbeider et al. (2020), the short-term target was designed as an immediate target when the population was endangered; as such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity. We therefore selected the short-term recovery target as a basis for a lower CU benchmark as opposed to the long-term recovery target. We set the lower distributional benchmark for each CU as at least half of the subpopulations within that CU having a 3-year geometric average escapement of 1000 spawners. When this threshold is met, a CU is considered to be above its lower benchmark. This distributional benchmark is specific to the Interior Fraser Coho SMU. We have retained it as part of this case study to maintain consistency with previous work.  
 
 
 
@@ -102,9 +97,10 @@ The first approach uses a distributional benchmark to characterize CU status, wh
 
 
 The second approach uses Sgen to characterize CU status.
-
   - proportional vs. probability-based logistic regression?  threshold p*?
   - logistic penalty used
+
+
 
 
 
